# homedoc-subtitle-translator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml  setzer_cli.py  setzer_core.py  setzer_gui.py
tests/: test_setzer_core.py
