[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homedoc-subtitle-translator"
version = "0.1.1"
description = "Translate SRT/VTT/TSV via a local LLM (Ollama-compatible). CLI-first with optional Tk GUI. Stdlib-only."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Martin Fellner", email = "martin.fellner@tmw.at" }]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Utilities",
]

[project.scripts]
setzer = "setzer_cli:main"
homedoc-subtitle-translator = "setzer_cli:main"
setzer-gui = "setzer_gui:main"

[tool.setuptools]
py-modules = ["setzer_core", "setzer_cli", "setzer_gui"]
